upgpkg: firefox-extension-https-everywhere 5.2.1-1
upstream release

Add experimental further templating to detect and warn if the signing
data is invalid or nonexistent. Should mostly be of use to maintainers.

--- a/firefox-extension-https-everywhere/PKGBUILD
+++ b/firefox-extension-https-everywhere/PKGBUILD
@@ -5,9 +5,9 @@
 
 _pkgname=https-everywhere
 pkgname=firefox-extension-${_pkgname}
-pkgver=5.2.0
+pkgver=5.2.1
 pkgrel=1
-_file=469533
+_file=471033
 pkgdesc="Plugin for firefox which ensures you are using https whenever it's possible."
 license=('GPL2')
 arch=('any')
@@ -16,7 +16,7 @@ depends=("firefox")
 makedepends=("unzip")
 source=("${_pkgname}-${pkgver}.xpi::https://addons.mozilla.org/firefox/downloads/file/${_file}/${_pkgname/-/_}-${pkgver}-an+tb+sm+fx.xpi")
 noextract=("${_pkgname}-${pkgver}.xpi")
-sha256sums=('7102f4c9a490a231446bc70ca5fa3a1da0b81c4088d5d77d5279b248f15d68e3')
+sha256sums=('5a9c9cd9ca93752d9bfbbf93227c572c5756807b441742b2749b064a4b486068')
 
 prepare() {
   cd "$srcdir"
@@ -26,6 +26,13 @@ prepare() {
 
 package() {
   cd "${srcdir}"
+
+  _signdata="${_pkgname}-${pkgver}/META-INF/mozilla.rsa"
+  if [[ ! -f "${_signdata}" ]] || ! grep -qs Production1 "${_signdata}"; then
+    warning "No valid signing data from AMO. This extension will *NOT* work unless you disable extension verification in Firefox."
+    # Add install file to print warning.
+    install=firefox-extension-verification.install
+  fi
 
   _extension_id="$(sed -n '/.*<em:id>\(.*\)<\/em:id>.*/{s//\1/p;q}' ${_pkgname}-${pkgver}/install.rdf)"
   _extension_dest="${pkgdir}/usr/lib/firefox/browser/extensions/${_extension_id}"
