--- a/vim-flagship-git/PKGBUILD
+++ b/vim-flagship-git/PKGBUILD
@@ -1,8 +1,10 @@
 # Maintainer: Eli Schwartz <eschwartz93@gmail.com>
 
+# All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
+
 pkgname=vim-flagship-git
-pkgver=1.0.r7.g6fb105f
-pkgrel=1
+pkgver=1.1.r3.g77342d7
+pkgrel=2
 pkgdesc="Configurable and extensible tab line and status line, by tpope"
 arch=('any')
 url="https://github.com/tpope/${pkgname%-git}"
@@ -12,13 +14,12 @@ depends=('vim')
 makedepends=('git')
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
-install=vimdoc.install
 source=("git://github.com/tpope/${pkgname%-git}.git")
 sha512sums=('SKIP')
 
 pkgver() {
     cd "${srcdir}/${pkgname%-git}"
-    git describe --long | sed 's/\([^-]*-g\)/r\1/;s/-/./g' | cut -c2-
+    git describe --long | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 package() {
