upgpkg: fanficfare-git 2.10.0.r11.g97f7eb1-1
upstream release

--- a/fanficfare-git/PKGBUILD
+++ b/fanficfare-git/PKGBUILD
@@ -4,7 +4,7 @@
 
 _pkgname=FanFicFare
 pkgname=fanficfare-git
-pkgver=2.9.0.r0.g8cfa65d
+pkgver=2.10.0.r11.g97f7eb1
 pkgrel=1
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
