upgpkg: qbittorrent-git 3.3.12.r1215.g67f44e03a-1
remove libtorrent-rasterbar < 1.1.2 workaround

--- a/qbittorrent-git/PKGBUILD
+++ b/qbittorrent-git/PKGBUILD
@@ -5,7 +5,7 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=qbittorrent-git
-pkgver=3.3.11.r1051.g9eb01fbe4
+pkgver=3.3.12.r1215.g67f44e03a
 pkgrel=1
 pkgdesc="A bittorrent client powered by C++, Qt5 and the good libtorrent library (development version)"
 arch=('i686' 'x86_64')
@@ -16,10 +16,8 @@ makedepends=('boost' 'git' 'qt5-tools')
 optdepends=('python: needed for torrent search tab')
 conflicts=('qbittorrent')
 provides=('qbittorrent')
-source=("${pkgname%-*}::git+https://github.com/qbittorrent/qBittorrent.git"
-        "0001-Revert-Use-new-libtorrent-1.1.2-utility-function-to-.patch")
-sha256sums=('SKIP'
-            '33542b69eb46cf42273514143e6e76969dba03ad9bca58d09f9aa972a109efec')
+source=("${pkgname%-*}::git+https://github.com/qbittorrent/qBittorrent.git")
+sha256sums=('SKIP')
 
 pkgver() {
   cd ${pkgname%-*}
@@ -28,14 +26,6 @@ pkgver() {
   _rev=$(git rev-list --count release-${_tag}..HEAD)
   _hash=$(git rev-parse --short HEAD)
   printf "%s.r%s.g%s" "$_tag" "$_rev" "$_hash"
-}
-
-prepare() {
-  cd ${pkgname%-*}
-
-  # Remove this once libtorrent-rasterbar 1.1.2 is released and packaged
-  # See: https://github.com/qbittorrent/qBittorrent/issues/5888
-  patch -p1 < ../0001-Revert-Use-new-libtorrent-1.1.2-utility-function-to-.patch
 }
 
 build() {
