upgpkg: vim-gitgutter-git 408.gb803a28-1
MIT license needs to be installed
Use HTTPS clone url, see: https://gist.github.com/grawity/4392747

--- a/vim-gitgutter-git/PKGBUILD
+++ b/vim-gitgutter-git/PKGBUILD
@@ -4,8 +4,8 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=vim-gitgutter-git
-pkgver=388.g1742a8f
-pkgrel=2
+pkgver=408.gb803a28
+pkgrel=1
 pkgdesc="A Vim plugin which shows a git diff in the 'gutter'"
 arch=('any')
 url="https://github.com/airblade/${pkgname%-git}"
@@ -14,7 +14,7 @@ groups=('vim-plugins')
 depends=('vim' 'git')
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
-source=("git://github.com/airblade/${pkgname%-git}.git")
+source=("git+${url}.git")
 md5sums=('SKIP')
 
 pkgver() {
@@ -26,4 +26,6 @@ package() {
     cd "${srcdir}/${pkgname%-git}"
     install -dm755 "${pkgdir}/usr/share/vim/vimfiles"
     find * -maxdepth 0 -not -name "test" -type d -exec cp -rt "${pkgdir}/usr/share/vim/vimfiles" '{}' \+
+
+    install -Dm644 LICENCE "${pkgdir}/usr/share/licenses/${pkgname}/LICENCE"
 }
