upgpkg: calibre-git 2.85.1.r515.g2fbaa19cd6-1
Add new dependencies.

--- a/calibre-git/PKGBUILD
+++ b/calibre-git/PKGBUILD
@@ -9,7 +9,7 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=calibre-git
-pkgver=2.85.1.r434.gd2ed90f043
+pkgver=2.85.1.r515.g2fbaa19cd6
 pkgrel=1
 _mathjax_commit=c493143c02f5809b1112af6c5a2c8eab31050118
 pkgdesc="Ebook management application, from git"
@@ -17,11 +17,11 @@ arch=('i686' 'x86_64')
 url="https://calibre-ebook.com/"
 license=('GPL3')
 depends=('python2-dateutil' 'python2-cssutils' 'python2-mechanize' 'mtdev'
-         'podofo' 'poppler' 'libwmf' 'chmlib' 'python2-lxml'
+         'podofo' 'poppler' 'libwmf' 'chmlib' 'python2-lxml' 'python2-regex'
          'libusbx' 'python2-pillow' 'python2-dnspython' 'python2-msgpack'
          'python2-pyqt5' 'python2-psutil' 'icu' 'libmtp' 'python2-dbus'
          'python2-netifaces' 'python2-cssselect' 'python2-apsw'
-         'qt5-webkit' 'qt5-svg' 'python2-pygments' 'optipng')
+         'qt5-webkit' 'qt5-svg' 'python2-chardet' 'python2-pygments' 'optipng')
 makedepends=('git' 'qt5-x11extras' 'xdg-utils' 'rapydscript-ng')
 optdepends=('ipython2: to use calibre-debug')
 provides=("${pkgname%-git}")
