upgpkg: qbittorrent-git 3.3.12.r1382.gff8020853-1
boost 1.64 rebuild

--- a/qbittorrent-git/PKGBUILD
+++ b/qbittorrent-git/PKGBUILD
@@ -5,7 +5,7 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=qbittorrent-git
-pkgver=3.3.12.r1215.g67f44e03a
+pkgver=3.3.12.r1382.gff8020853
 pkgrel=1
 pkgdesc="A bittorrent client powered by C++, Qt5 and the good libtorrent library (development version)"
 arch=('i686' 'x86_64')
