--- a/qbittorrent-git/PKGBUILD
+++ b/qbittorrent-git/PKGBUILD
@@ -5,8 +5,8 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=qbittorrent-git
-pkgver=3.3.12.r1382.gff8020853
-pkgrel=1
+pkgver=3.3.13.r1414.g66aeafdc6
+pkgrel=2
 pkgdesc="A bittorrent client powered by C++, Qt5 and the good libtorrent library (development version)"
 arch=('i686' 'x86_64')
 url="http://www.qbittorrent.org/"
