--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.asc
 *.sig
 
+# log files from makepkg --log (or extra-x86_64-build)
+*.log
+
 # subfolders, e.g. source or built package trees, vcs
 */**/
 
